[package]
name = "cfddns"
version = "1.6.2"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/uetchy/cfddns"
description = "Yet another DDNS client for Cloudflare"
authors = ["Yasuaki Uechi <y@uechi.io>"]

[dependencies]
anyhow = "1.0.56"
tokio = { version = "1.17.0", features = ["macros", "rt"] }
toml = "0.5"
serde = { version = "1.0" }
reqwest = { version = "0.11.10" }
clap = { version = "3", features = ["cargo"] }
cloudflare = "0.9.1"

[patch.crates-io]
cloudflare = { git = "https://github.com/exrook/cloudflare-rs", branch = "patch-1" }
