[package]
name = "cfddns"
version = "1.6.2"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/uetchy/cfddns"
description = "Yet another DDNS client for Cloudflare"
authors = ["Yasuaki Uechi <y@uechi.io>"]

[dependencies]
anyhow = "1.0.56"
tokio = { version = "1.17.0", features = ["macros", "rt"] }
toml = "0.5"
serde = { version = "1.0" }
reqwest = { version = "0.11.10", default-features = false }
clap = { version = "3", features = ["cargo"] }
cloudflare = { version = "0.9.1", default-features = false }

[features]
default = ["default-tls"]
rustls-tls = ["reqwest/rustls-tls", "cloudflare/rustls-tls"]
default-tls = ["reqwest/default-tls", "cloudflare/default-tls"]

[patch.crates-io]
cloudflare = { git = "https://github.com/exrook/cloudflare-rs", branch = "patch-1" }
